# the-council

./: .gitignore  README.md  pyproject.toml
.council/personas/: ada_lovelace.md  linus_trivolds.md  the_architect.md  the_skeptic.md
src/the_council/: __init__.py  __main__.py  backends.py  council.py  defaults.py  main.py  member.py  message_queue.py  personas.py  session.py  storage.py
tests/: __init__.py  test_backends.py  test_council.py  test_message_queue.py  test_personas.py  test_server.py  test_storage.py
