[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-council"
version = "0.1.0"
description = "A council of AI Elder Personas for Claude Code to consult with"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "mcp", "ai", "council", "plugin"]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "python-slugify>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
the-council = "the_council.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/the_council"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
